--- a/deliveroo-backend/Pipfile
+++ b/deliveroo-backend/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
-
+flask-jwt-extended = "*"
 python-dotenv = "*"
 werkzeug = "*"
 psycopg2-binary = "*"
